# tpcoder-utility-public-2024

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
.github/workflows/: cfp-deploy.yml
src/: app.rs  main.rs  pages.rs
src/components/: navbar.rs
src/pages/: back_of_the_envelope.rs  haversine.rs  home.rs  not_found.rs  qrcode.rs  ulid.rs  uuid.rs
