[package]
name = "tpcoder-utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
gloo-net = { version = "0.6.0", features = ["http"] }
log = "0.4"

# for use-cases
uuid = { version = "1.10.0", features = ["v4"] }
ulid = "1.1.3"
qrcode = "0.14.1"
base64 = "0.22.1"
geoutils = "0.5.1"

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1.7" }
image = "0.25.2"